[package]
name = "sitewhere-controller"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Rosinosky <guillaumerosinosky@yahoo.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { path="paho.mqtt.rust", default-features=false, features=["bundled"] }
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
tracing = { version = "0.1.25"}
tracing-subscriber = "0.2"
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"]}
futures = {version = "0.3.25", features = ["compat"]}