[package]
name = "sitewhere-controller"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Rosinosky <guillaumerosinosky@yahoo.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.18.0"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
tracing = { version = "0.1.37"}
tracing-subscriber = { version = "0.2", features = ["env-filter"]}
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"]}
futures = {version = "0.3.25", features = ["compat"]}
rust-s3 = "0.32.3"

[profile.release]
opt-level = 3

[features]
release_max_level_info = ["tracing/release_max_level_info"]